v2.0.0 - GUI более настраиваемое. исправлены баг, когда опыт мог списываться, а бутылочки не добавляться. Оптимизация кода